<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none" android:id="@+id/show_movies">
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/most_popular"
            android:contentDescription="@string/menu_popular"/>
        <item
            android:id="@+id/nav_top_rated"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/top_rated"
            android:contentDescription="@string/menu_top_rated"/>
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/upcoming" />
        <item android:title="@string/favourite">
                <item
                    android:id="@+id/nav_favourite"
                    android:icon="@drawable/ic_star_favorite_24dp"
                    android:title="@string/favourite"
                    android:contentDescription="@string/menu_favourite"/>
        </item>
    </group>
    <group android:checkableBehavior="single" android:id="@+id/search">
    </group>
    <item android:title="communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
        </menu>
    </item>

</menu>
