<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.MovieDetails"
    tools:showIn="@layout/app_bar_moview_details">

    <ImageView
        android:id="@+id/movie_img"
        android:layout_width="0dp"
        android:layout_height="184dp"
        android:contentDescription="@string/contentDescription"
        android:minHeight="185dp"
        android:scaleType="fitXY"
        android:tint="@color/test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/movie"
        android:textColor="@color/text_color_highlighted"
        android:textSize="@dimen/textSize_largex"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/movie_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/movie_img" />

    <LinearLayout
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/release_genre"
        app:layout_constraintTop_toBottomOf="@+id/movie_title">

        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_rating"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_largex"
            android:textStyle="bold|italic"
            tools:text="9" />

        <TextView
            android:id="@+id/max_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_rating"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/release_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/rating"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_title">

        <TextView
            android:id="@+id/movie_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/movie_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>